Partially add endpoints
